Add footer links

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by Martina Scibilia, versioned on GitHub, and
-      hosted on Render
+      This project was coded by
+      <a href="http://github.com/masci-hub" target="_blank">Martina Scibilia</a
+      >, versioned on
+      <a href="http://github.com/masci-hub/world-clock-project" target="_blank"
+        >GitHub</a
+      >, and hosted on
+      <a href="http://world-clock-project-tqng.onrender.com/" target="_blank"
+        >Render</a
+      >
     </footer>
     <script src="script.js"></script>
   </body>
