--- a/index.html
+++ b/index.html
@@ -14,31 +14,36 @@
           <option>Choose a city</option>
           <option>Dublin</option>
           <option>Los Angeles</option>
-          <option>New York</option>
           <option>Sydney</option>
           <option>Tokyo</option>
         </select>
       </form>
-      <div class="current-location">
-        <div class="current-city"><h2>Rome</h2></div>
-        <div class="current-date">Monday, May 7th, 2025</div>
-        <div class="current-time">11:45 AM</div>
+      <div class="current-city">
+        <div>
+          <h2>Rome</h2>
+          <div class="current-date">May 7th 2025</div>
+        </div>
+        <div class="current-time">11:45 <small>AM</small></div>
       </div>
-      <footer>
-        This project was coded by
-        <a href="http://github.com/masci-hub" target="_blank"
-          >Martina Scibilia</a
-        >, versioned on
-        <a
-          href="http://github.com/masci-hub/world-clock-project"
-          target="_blank"
-          >GitHub</a
-        >, and hosted on
-        <a href="http://world-clock-project-tqng.onrender.com/" target="_blank"
-          >Render</a
-        >
-      </footer>
+      <div class="current-city">
+        <div>
+          <h2>New York</h2>
+          <div class="current-date">May 7th 2025</div>
+        </div>
+        <div class="current-time">11:45 <small>AM</small></div>
+      </div>
     </div>
+    <footer>
+      This project was coded by
+      <a href="http://github.com/masci-hub" target="_blank">Martina Scibilia</a
+      >, versioned on
+      <a href="http://github.com/masci-hub/world-clock-project" target="_blank"
+        >GitHub</a
+      >, and hosted on
+      <a href="http://world-clock-project-tqng.onrender.com/" target="_blank"
+        >Render</a
+      >
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
