--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <form>
         <select id="city-select">
           <option hidden>Choose a city</option>
+          <option value="current">My location</option>
           <option value="America/New_York">New York</option>
           <option value="America/Los_Angeles">Los Angeles</option>
           <option value="Australia/Sydney">Sydney</option>
