--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <select id="city-select">
           <option hidden>Choose a city</option>
           <option value="current">My location</option>
-          <option value="America/New_York">New York</option>
           <option value="America/Los_Angeles">Los Angeles</option>
           <option value="Australia/Sydney">Sydney</option>
           <option value="Asia/Tokyo">Tokyo</option>
@@ -25,6 +24,20 @@
         <div class="city" id="rome">
           <div>
             <h2>Rome</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small></small></div>
+        </div>
+        <div class="city" id="new-york">
+          <div>
+            <h2>New York</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small></small></div>
+        </div>
+        <div class="city" id="london">
+          <div>
+            <h2>London</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small></small></div>
